force-app/main/default/objects/SccRegionRule__mdt/SccRegionRule__mdt.object-meta.xml
<CustomObject>
    <description>可由管理员维护的省市别名与四位行政区划码。</description>
    <label>客户编码省市规则</label>
</CustomObject>