force-app/main/default/objects/SccRegionRule__mdt/fields/CityName__c.field-meta.xml
<CustomField>
    <fullName>CityName__c</fullName>
    <label>城市标准名称</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>