force-app/main/default/objects/SccRegionRule__mdt/fields/ProvinceName__c.field-meta.xml
<CustomField>
    <fullName>ProvinceName__c</fullName>
    <label>省份标准名称</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>