force-app/main/default/objects/SccRegionRule__mdt/fields/RegionCode__c.field-meta.xml
<CustomField>
    <fullName>RegionCode__c</fullName>
    <description>省级前两位加地级行政区后两位。</description>
    <label>四位行政区划码</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>